fix: prevent double scrollbars

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,11 +19,15 @@
 }
 
 @layer base {
+  html,
   body {
-    @apply bg-secondary overflow-x-hidden overflow-y-auto leading-relaxed;
+    height: 100%;
+  }
+  body {
+    @apply bg-secondary overflow-hidden leading-relaxed;
   }
   .page {
-    @apply w-full min-h-screen h-auto overflow-y-auto;
+    @apply w-full h-[100dvh] overflow-y-auto overflow-x-hidden;
   }
   .h1 {
     @apply text-[35px] leading-tight md:text-[60px] md:leading-[1.3] mb-8 font-semibold;
